[package]
name = "asm"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10.6"
# Enforce blst portable feature for runtime detection of Intel ADX instruction set.
blst = { version = "0.3.15", features = ["portable"] }
digest = { version = "0.10.7", features = ["alloc"] }
rand_core = { version = "0.6.4", features = ["std"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
thiserror = "2.0.16"

[dev-dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
num-bigint = "0.4.6"
num-rational = "0.4.2"
proptest = "1.7.0"
rand = "0.9.2"
rand_chacha = "0.3.1"
